--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,37 @@
-h1 {
-  color: blue;
+body {
+  margin: 30px;
+}
+
+.container {
+  margin: 0;
+  padding: 0;
+}
+
+h1,
+p,
+footer {
+  text-align: center;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+
+footer {
+  margin: 20px;
+}
+
+footer a {
+  margin: 20px !important;
+  color: rgb(88, 160, 175) !important;
+  display: inline !important;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
+
+img {
+  border-radius: 4px;
+  max-width: 250px;
+  display: block;
+  margin: 0 auto;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
