--- a/style/style.css
+++ b/style/style.css
@@ -2,11 +2,6 @@ body {
   margin: 30px;
 }
 
-.container {
-  margin: 0;
-  padding: 0;
-}
-
 h1,
 p,
 footer {
@@ -19,9 +14,9 @@ footer {
 }
 
 footer a {
-  margin: 20px !important;
-  color: rgb(88, 160, 175) !important;
-  display: inline !important;
+  margin: 20px;
+  color: rgb(88, 160, 175);
+  text-decoration: none;
 }
 
 footer a:hover {
